--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.2</junit.version>
+        <!-- Definisci qui le versioni delle tue librerie se vuoi -->
+        <!-- <sqlite.jdbc.version>3.45.1.0</sqlite.jdbc.version> -->
+        <!-- <openpdf.version>1.3.30</openpdf.version> -->
     </properties>
 
     <dependencies>
@@ -30,6 +33,20 @@
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.36.0.3</version>
+        </dependency>
+
+        <!-- Dipendenza per generare PDF con OpenPDF -->
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.30</version>
         </dependency>
 
         <dependency>
